--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     </head>
     <body>
         <h1> Bienvenue dans la page d'acceuil</h1>
-        <form action="/SearchBar" method="get">
-            <input type="text" id="search-input" name="q" class="search" placeholder="Rechercher une destination...">
-            <button type="submit">Rechercher</button>
-        </form>
-        <center><ul class="result" id="results-list"></ul></center>
-    
-        
+        <div class="barre">
+            <form action="/SearchBar" method="get" class="form">
+                <input type="text" id="search-input" name="q" class="search" placeholder="Rechercher une destination...">
+                <button type="submit" class="Rechercher">Rechercher</button>
+            </form>
+            <ul class="result" id="results-list"></ul>
+            <p>Populaire depuis  </p>
+            <ul class="result" id="results-from"></ul>
+
+        </div>
+
     </body>
 
 </html>
