--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <h1> Bienvenue dans la page d'acceuil de TicTacTrip</h1>
-        <div class="barre">
+        <div class="barre"><!--Code de la barre de recherche -->
             <form action="/SearchBar" method="get" class="form">
-                <input type="text" id="search-input" name="q" class="search" placeholder="Rechercher une destination...">
-                <button type="submit" class="Rechercher">Rechercher</button>
+                <input type="text" id="search-input" name="q" class="search" placeholder="Rechercher une destination..."><!--Code de la barre de recherche -->
+                <button type="submit" class="Rechercher">Rechercher</button><!--Code du boutton-->
             </form>
-            <ul class="result" id="results-list"></ul>
-            <ul class="result" id="results-from"></ul>
+            <ul class="result" id="results-list"></ul><!--Espace pour le resultats de l'autoimplementation-->
+            <ul class="result" id="results-from"></ul><!--Espace pour le resultats des destinations-->
         </div>
 
     </body>
